--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 台湾-1.32MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
-  - {name: 🇺🇸 美国-1.57MB/s(Youtube:不良林), server: 205.185.124.145, port: 85, type: vmess, uuid: 887a1c68-4665-3e74-a911-4e2be6f2e82f, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v2ray, ws-headers: {Host: 205.185.124.145}}
-  - {name: 🇨🇳 中国-1.44MB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇨🇳 中国-4.14MB/s(Youtube:不良林), server: in04.dns2333.xyz, port: 64078, type: vmess, uuid: 37ad0507-7fae-3165-b839-541d09ab7fef, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: in04.dns2333.xyz}}
-  - {name: 🇫🇷 法国-1.94MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
   - {name: 🇸🇬 新加坡-435.2KB/s(Youtube:不良林), server: sg1.v2yyds.cc, port: 32110, type: trojan, password: c0669346-7ba9-4fda-91a4-238fb8d0a4d2, sni: sg1.v2yyds.cc, skip-cert-verify: true}
   - {name: 🇷🇺 俄罗斯联邦-507.4KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇺🇸 美国-183.6KB/s(Youtube:不良林), server: 205.185.124.145, port: 85, type: vmess, uuid: 887a1c68-4665-3e74-a911-4e2be6f2e82f, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v2ray, ws-headers: {Host: 205.185.124.145}}
+  - {name: 🇨🇳 中国-4.14MB/s(Youtube:不良林), server: in04.dns2333.xyz, port: 64078, type: vmess, uuid: 37ad0507-7fae-3165-b839-541d09ab7fef, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: in04.dns2333.xyz}}
+  - {name: 🇦🇺 澳大利亚-798.3KB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
   - {name: 🇨🇳 中国-204.3KB/s(Youtube:不良林), server: 521hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 521hk.fans8.xyz}}
   - {name: 🇦🇺 澳大利亚-344.7KB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
   - {name: 🇨🇳 中国-220.4KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇨🇳 中国-529.4KB/s(Youtube:不良林), server: in01.dns2333.xyz, port: 64078, type: vmess, uuid: 37ad0507-7fae-3165-b839-541d09ab7fef, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: in01.dns2333.xyz}}
+  - {name: 🇯🇵 日本-613.6KB/s(Youtube:不良林), server: jp1.v2yyds.cc, port: 32111, type: trojan, password: c0669346-7ba9-4fda-91a4-238fb8d0a4d2, sni: jp1.v2yyds.cc, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 台湾-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.94MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-435.2KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-507.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-183.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-798.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-204.3KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-344.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-220.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-529.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-613.6KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 台湾-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.94MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-435.2KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-507.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-183.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-798.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-204.3KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-344.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-220.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-529.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-613.6KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 台湾-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.94MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-435.2KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-507.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-183.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-798.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-204.3KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-344.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-220.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-529.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-613.6KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-1.32MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 台湾-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.94MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-435.2KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-507.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-183.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-798.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-204.3KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-344.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-220.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-529.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-613.6KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 台湾-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.94MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-435.2KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-507.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-183.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-798.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-204.3KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-344.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-220.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-529.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-613.6KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 台湾-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.94MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-435.2KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-507.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-183.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-798.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-204.3KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-344.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-220.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-529.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-613.6KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 台湾-1.32MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.94MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-435.2KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-507.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-183.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-798.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-204.3KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-344.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-220.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-529.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-613.6KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
