--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,43 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-313.3KB/s(Youtube:不良林), server: 51jp1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 51jp1.fans8.xyz}}
-  - {name: 🇨🇳 中国-414.0KB/s(Youtube:不良林), server: 521hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 521hk.fans8.xyz}}
   - {name: 🇺🇸 美国-6.84MB/s(Youtube:不良林), server: kr01.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr01.wangxd.life, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-446.6KB/s(Youtube:不良林), server: in01.dns2333.xyz, port: 64078, type: vmess, uuid: 37ad0507-7fae-3165-b839-541d09ab7fef, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: in01.dns2333.xyz}}
   - {name: 🇨🇳 中国-285.4KB/s(Youtube:不良林), server: fkgfw-prod.i.sxl.cn, port: 443, type: ss, cipher: aes-256-cfb, password: E4DNMf73kHPrd8Qq7aqGPf7f}
+  - {name: 🇮🇳 印度-511.5KB/s(Youtube:不良林), server: jgwhdlb3.gaox.ml, port: 443, type: trojan, password: 006baa3f-4bc3-4915-b60d-c8c5dae11a11, sni: jgwhdlb3.gaox.ml, skip-cert-verify: true}
   - {name: 🇨🇳 中国-206.7KB/s(Youtube:不良林), server: 139.219.130.70, port: 443, type: ss, cipher: aes-256-cfb, password: E4DNMf73kHPrd8Qq7aqGPf7f}
+  - {name: 🇸🇬 新加坡-381.7KB/s(Youtube:不良林), server: sg1.v2yyds.cc, port: 32110, type: trojan, password: c0669346-7ba9-4fda-91a4-238fb8d0a4d2, sni: sg1.v2yyds.cc, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.45MB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇷🇺 俄罗斯联邦-211.7KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇺🇸 美国-341.1KB/s(Youtube:不良林), server: jgwcc3.gaox.ml, port: 443, type: trojan, password: b291d129-ee55-4801-a9b8-b5316e5c37b7, sni: jgwcc3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-238.1KB/s(Youtube:不良林), server: 523hk1.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 523hk1.fans8.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-313.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-414.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-6.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-446.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-285.4KB/s(Youtube:不良林)
+      - 🇮🇳 印度-511.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-206.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-381.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.45MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-211.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-341.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-238.1KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-313.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-414.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-6.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-446.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-285.4KB/s(Youtube:不良林)
+      - 🇮🇳 印度-511.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-206.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-381.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.45MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-211.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-341.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-238.1KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-313.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-414.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-6.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-446.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-285.4KB/s(Youtube:不良林)
+      - 🇮🇳 印度-511.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-206.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-381.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.45MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-211.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-341.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-238.1KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -52,32 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-313.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-414.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-6.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-446.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-285.4KB/s(Youtube:不良林)
+      - 🇮🇳 印度-511.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-206.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-381.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.45MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-211.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-341.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-238.1KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-313.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-414.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-6.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-446.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-285.4KB/s(Youtube:不良林)
+      - 🇮🇳 印度-511.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-206.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-381.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.45MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-211.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-341.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-238.1KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-313.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-414.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-6.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-446.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-285.4KB/s(Youtube:不良林)
+      - 🇮🇳 印度-511.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-206.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-381.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.45MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-211.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-341.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-238.1KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -93,11 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-313.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-414.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-6.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-446.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-285.4KB/s(Youtube:不良林)
+      - 🇮🇳 印度-511.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-206.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-381.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.45MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-211.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-341.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-238.1KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
